--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2593,10 +2593,10 @@ input, select, textarea {
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/henry-be-IicyiaPYGGI-unsplash.jpg");
-		background-position: top left,							top left;
+		background-image: url("images/ocean-view.jpg"), url("../../images/ocean-view.jpg");
+		background-position: center top,							 center top;
 		background-repeat: repeat,								no-repeat;
-		background-size: auto,								250%;
+		background-size: fill,								150%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
@@ -3078,10 +3078,10 @@ input, select, textarea {
 			#footer {
 				background-attachment: scroll;
 				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-				background-position: top left,						bottom center;
+				background-image: url("images/ocean-view.jpg"), url("../../images/ocean-view.jpg");
+				background-position:  center top,						 center top;
 				background-repeat: repeat,							no-repeat;
-				background-size: auto,							cover;
+				background-size: fill,							cover;
 				bottom: auto;
 				left: auto;
 				padding: 4em 4em 6em 4em;
