--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2593,10 +2593,10 @@ input, select, textarea {
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/ocean-view.jpg"), url("../../images/ocean-view.jpg");
-		background-position: center top,							 center top;
+		background-image: url("images/jeremy-bishop-4kv4odtKd0U-unsplash.jpg"), url("../../images/jeremy-bishop-4kv4odtKd0U-unsplash.jpg");
+		background-position: center,							 center;
 		background-repeat: repeat,								no-repeat;
-		background-size: fill,								150%;
+		background-size: auto,								150%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
@@ -2650,11 +2650,11 @@ input, select, textarea {
 	}
 
 		#footer .icons a {
-			color: rgba(255, 255, 255, 0.4);
+			color: rgb(255, 255, 255);
 		}
 
 	#footer .copyright {
-		color: rgba(255, 255, 255, 0.4);
+		color: rgb(255, 255, 255);
 		font-size: 0.8em;
 		list-style: none;
 		margin: 1em 0 0 0;
@@ -3078,10 +3078,10 @@ input, select, textarea {
 			#footer {
 				background-attachment: scroll;
 				background-color: #1f1815;
-				background-image: url("images/ocean-view.jpg"), url("../../images/ocean-view.jpg");
-				background-position:  center top,						 center top;
+				background-image: url("images/jeremy-bishop-4kv4odtKd0U-unsplash.jpg"), url("../../images/jeremy-bishop-4kv4odtKd0U-unsplash.jpg");
+				background-position: center,						 center;
 				background-repeat: repeat,							no-repeat;
-				background-size: fill,							cover;
+				background-size: auto,							cover;
 				bottom: auto;
 				left: auto;
 				padding: 4em 4em 6em 4em;
